infra/k8s/post-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: posts-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: docker.io/joy/posts:0.0.1
