infra/k8s/comments-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: jayabrata180/comments:latest
          resources: # Add resource limits for the container
            limits:
              cpu: "0.5"  # Limits CPU usage to 0.5 cores
              memory: "512Mi"  # Limits memory usage to 512 MiB
            requests:
              cpu: "0.2"  # Requests 0.2 cores of CPU
              memory: "256Mi"  # Requests 256 MiB of memory
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
