infra/k8s/moderation-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: jayabrata180/moderation:latest
          resources: # Add resource limits for the container
            limits:
              cpu: "0.5"  # Limits CPU usage to 0.5 cores
              memory: "512Mi"  # Limits memory usage to 512 MiB
            requests:
              cpu: "0.2"  # Requests 0.2 cores of CPU
              memory: "256Mi"  # Requests 256 MiB of memory
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
