infra/k8s/query-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: jayabrata180/query:latest
          resources: # Add resource limits for the container
            limits:
              cpu: "0.5"  # Limits CPU usage to 0.5 cores
              memory: "512Mi"  # Limits memory usage to 512 MiB
            requests:
              cpu: "0.2"  # Requests 0.2 cores of CPU
              memory: "256Mi"  # Requests 256 MiB of memory
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
